@@ -1,4 +1,5 @@
 1.0.0
+ * Fix bulk reads of multiple tables that potentially have the same data file name (CASSANDRA-19507)
  * Fix XXHash32Digest calculated digest value (CASSANDRA-19500)
  * Report additional bulk analytics job stats for instrumentation (CASSANDRA-19418)
  * Add certificate expiry check to start up validations done in Cassandra Analytics library (CASSANDRA-19424)
